--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-08  Matthias Hölzer-Klüpfel <mhk@kde.org>
+	* emit loadedFile and savedFile again
+	* added DCOP interface for kdevpartcontroller
+
 2002-04-08  Roberto Raggi <raggi@cli.di.unipi.it>
 	* Fixed text insertion in Multi-language code template
 	
@@ -28,6 +32,8 @@
 2002-04-06  Matthias Hölzer-Klüpfel <mhk@kde.org>
 	* moved all part handling functions from KDevCore to
 	  KDevPartController
+	* enabled context sensitve popup menus in the text editor
+	* various fixes and workarounds for QextMdi modes
 
 2002-04-05  Matthias Hölzer-Klüpfel <mhk@kde.org>
 	* commited some patches by Bernd for fixing layout issues
