--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@
 	* added KDevPlugin as successor of KDevPart
 	* ported the konsole plugin to KDevPlugin
 	* ported the editor chooser plugin to KDevPlugin
+	* ported the code abbreviation plugin to KDevPlugin
 	* extended gideon to load global KDevPlugin components
 	* centralized the trader queries for KDevelop/Part (Plugin) with
 	the additional constraint for the plugin scope into a static
@@ -18,6 +19,7 @@
 	property of a service into a QStringList into a static private
 	method of PluginController
 	* install kdevelop components as KDE modules, not as libraries
+	* PluginController: don't bail out of loading of a kdevpart failed
 
 2002-04-08  Matthias Hölzer-Klüpfel <mhk@kde.org>
 	* emit loadedFile and savedFile again
