--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2002-04-09  Matthias Hölzer-Klüpfel <mhk@kde.org>
+	* ask user to save modified files before quitting
+
 2002-04-09 Roberto Raggi <raggi@cli.di.unipi.it>
 	* fixed crash in KDevDocTree
 	* removed qextmdi from kdevelop directory
