--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-10  Matthias Hölzer-Klüpfel <mhk@kde.org>
+	* implemented setting the execution point
+	* move execution point handling from core to part controller
+
 2002-04-10  Simon Hausmann <hausmann@kde.org>
 
 	* ported the appwizard to KDP/KGF
