--- a/AUTHORS
+++ b/AUTHORS
@@ -9,7 +9,7 @@ C++ source parser:
 Java support:
   Richard Dale <Richard_Dale@tipitina.demon.co.uk>
 
-Context menu stuff, PHP support:
+Framework, dialogs, PHP support:
   Sandy Meier <smeier@kdevelop.org>
 
 Several parts, htdig searching & indexing:
