--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-04-14  Bernd Gehrmann  <bernd@mail.berlios.de>
+
+	* Support for multiple file templates in app wizard
+	* More work on new class dialog
+
 2992-94-14  Matthias Hölzer-Klüpfel <mhk@kde.org>
 	* Added a new part that provides a "Open with" file menu entry
 
