--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
 
 2992-94-14  Matthias Hölzer-Klüpfel <mhk@kde.org>
 	* Added a new part that provides a "Open with" file menu entry
+	* Fixes for saving project settings on shutdown
+	* Properly enable menu entries when loading "last project"
 
 2002-04-13  Daniel Engelschalt <daniel.engelschalt@gmx.net>
 	* classstore config now in cppsupport
