--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-04-17  Matthias Hölzer-Klüpfel <mhk@kde.org>
+
+	* introduced a facade to access the KTextEditor interfaces
+	* removed some code from PartController that is no longer
+	  needed
+
 2002-04-17  Bernd Gehrmann  <bernd@mail.berlios.de>
 
 	* Populate Build->Build Target menu in CustomProject
