--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2002-04-24  F@lk Brettschneider  <falk@kdevelop.org>
+        * bugfix for QFocusEvent::m_reason in QextMDI copy, it stabilizes the optimized focus mechanism
+
 2002-04-23  Bernd Gehrmann  <bernd@mail.berlios.de>
 
 	* Removed redundant loadparts property from
