--- a/TODO
+++ b/TODO
@@ -1,8 +1,6 @@
 Short-Term:
 
 mhk: move function areas of kdevcore into separate classes
-mhk: try to implement breakpoints with the MarkInterface
-mhk: reorganize the breakpoint handling code
 
 Mid-Term:
 
@@ -14,6 +12,8 @@ mhk: add doc comments to the lib files I changed ;)
 mhk: find a nicer way to remove dynamic menu entries from context menus
 mhk: load plugins dynamically
 mhk: valgrind!
+mhk: make sure all lib interfaces are available via DCOP
+mhk: use mimetype to determine code files, not extension
 
 Long-Term:
 
