--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-26 Harald Fernengel <harry@kdevelop.org>
+        * Added first version of SourceNav Part which adds back/forward tool-buttons for code navigation.
+        * Allow user to open more than one file in KFileDialog
+
 2002-04-25 Matthias Hölzer-Klüpfel <mhk@kde.org>
 
 	* started support for debugger handling via the new
