Added a splashscreen. Well, technically. Now an artist could help ;)

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@
 	
 	* Added a part providing a history, allowing you to go
 	  back and forward 
+	* Added splashscreen. Now we need an artist! :-)
 
 2002-04-28  Harald Fernengel <harry@kdevelop.org>
         * SourceNavPart now uses KToolBarPopupAction to display nifty
