Allow adding and removing files from custom project

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
 	  when no file is loaded
 	* Don't parse headers twice, now that they
 	  are included in AutoProjectPart::allFiles()
+	* Allow adding and removing files from
+	  custom project
 
 2002-04-29  Bernd Gehrmann  <bernd@mail.berlios.de>
 
