--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-05-03  Bernd Gehrmann  <bernd@mail.berlios.de>
+
+	* Structure view for HTML, Docbook and LaTeX
+
 2002-05-01  Bernd Gehrmann  <bernd@mail.berlios.de>
 
 	* Limit size of class and method combo boxes
