--- a/HACKING
+++ b/HACKING
@@ -37,20 +37,24 @@ A small guide how to extend Gideon via plugins:
      into the source file, so that the factory can be accessed by
      KDE's library loader. Keep in mind that the name of the method
      init_libfoo() is required for a library with the name libfoo.so.
+     This may be simplified by the use of the K_EXPORT_COMPONENT_FACTORY 
+     macro which is defined in klibloader.h:
+       K_EXPORT_COMPONENT_FACTORY( libfoo, FooFactory );
+
      Your factory must reimplement the createPartObject() method
      of KDevFactory and produce the part there.
      See parts/doctreeview/doctreeviewfactory.cpp for an example.
 
-3.) Implement your part. It must be derived from KDevPart.
-    KDevPart takes three arguments: 1.) a pointer to a KDevApi object.
-    This is only used internally. Just give it the argument you get
-    in the factory's createPartObject() method. 2.) A parent argument.
-    This also comes from createPartObject(). 3.) A name, which in turn
+
+
+3.) Implement your part. It must be derived from  KDevPlugin.
+    KDevPlugin takes two arguments: 1.) A parent argument. This also
+    comes from createPartObject(). 2.) A name, which in turn
     is given to the QObject constructor.
 
 
 A part can access other components of the IDE via some accessors
-of KDevPart: The application core via core(), the project management
+of KDevPlugin: The application core via core(), the project management
 via project(), the programming language specific stuff via
 languageSupport(), the make frontend via makeFrontend(), the
 part which displays appication output via appFrontend(), and
