--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-05-06  Bernd Gehrmann  <bernd@mail.berlios.de>
+
+	* Fixed history part crashing
+	* StatusBar cleanup
+	* Fixed ever-growing popup menu in editor
+
 2002-05-03  Bernd Gehrmann  <bernd@mail.berlios.de>
 
 	* Structure view for HTML, Docbook and LaTeX
